src/objects/ACED_Delivery_Indication__c.object
<CustomObject>
    <fields>
        <fullName>Actual_eInteraction__c</fullName>
        <inlineHelpText>This is a helptext for Actual eInteraction</inlineHelpText>
        <label>Actual eInteraction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Delivery__r.Affilliate__c</formula>
        <inlineHelpText>This is a helptext for Affiliate</inlineHelpText>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Indication__c</fullName>
        <inlineHelpText>This is a helptext for Brand Indication</inlineHelpText>
        <label>Brand Indication</label>
        <referenceTo>ACED_Brand_Indications__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Delivery_Indications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Delivery__r.Channel__c</formula>
        <inlineHelpText>This is a helptext for Channel</inlineHelpText>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <inlineHelpText>This is a helptext for Delivery</inlineHelpText>
        <label>Delivery</label>
        <referenceTo>ACED_Deliveries__c</referenceTo>
        <relationshipLabel>Delivery Indications</relationshipLabel>
        <relationshipName>Delivery_Indications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <inlineHelpText>This is a helptext for Effort</inlineHelpText>
        <label>Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effort_eInteraction__c</fullName>
        <inlineHelpText>This is a helptext for Effort eInteraction</inlineHelpText>
        <label>Effort eInteraction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <formula>TEXT(Delivery__r.Activity__r.Program__r.HUB__c)</formula>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Delivery_Brand_Indication_Value__c</fullName>
        <label>Unique Delivery Brand Indication Value</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Delivery Brand Indication</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Delivery Indication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Indications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RangeforEffort</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Effort__c &lt;0, Effort__c &gt;1)</errorConditionFormula>
        <errorDisplayField>Effort__c</errorDisplayField>
        <errorMessage>Effort value should always be between 0 to 100%</errorMessage>
    </validationRules>
</CustomObject>